# Lunar-Rover

./: CMakeLists.txt  README.md  package.xml  setup.py
config/: controllers.yaml
launch/: gazebo_sim.launch.py  launch_sim.launch.py  lidar3d_0.launch.py  robot_sim.launch.py  robot_state_publisher.launch.py  rsp.launch.py  rviz.launch.py
meshes/dae/: rover_assm.263.dae  rover_assm.266.dae  rover_assm.267.dae  rover_assm.272.dae  rover_assm.273.dae  rover_assm.277.dae
rviz/: config.rviz  default.rviz
sdf/: rover.sdf
urdf/: demofile2.urdf  rover (copy).urdf  rover plus 1.urdf  rover.urdf  translate.py  translation.urdf
